@startuml BattleServices
skinparam classAttributeIconSize 0
skinparam direction top to bottom
skinparam class {
  BackgroundColor #FFF9E6
  BorderColor #333333
  ArrowColor #333333
}

title Application Layer - Battle Services

interface IBattleService {
  + ExecutePlayerTurn(moveIndex: int): BattleTurnResult
  + ExecuteEnemyTurn(): BattleTurnResult
  + ProcessVictory(): ProcessExpResult
  + CanSwitchPokemon(target: Pokemon): bool
}

class BattleService {
  - _gameSession: GameSession
  - _userRepo: IUserRepository
  - _worldGen: IWorldGenerationService
  - _expService: IExpService
  + ExecutePlayerTurn(moveIndex: int): BattleTurnResult
  + ExecuteEnemyTurn(): BattleTurnResult
  + ProcessVictory(): ProcessExpResult
  + CanSwitchPokemon(target: Pokemon): bool
}

class BattleTurnResult <<record>> {
  + IsEnemyFainted: bool
  + IsPlayerFainted: bool
  + MoveUsed: string?
  + CombatLogs: List<string>
  + {static} Continue(): BattleTurnResult
  + {static} Continue(moveName: string, logs: List<string>): BattleTurnResult
  + {static} EnemyFainted(logs: List<string>): BattleTurnResult
  + {static} PlayerFainted(logs: List<string>): BattleTurnResult
}

class ProcessExpResult <<record>> {
  + ExpGained: int
  + LeveledUp: bool
  + OldName: string?
  + EvolutionName: string?
  + NewMovesLearned: List<string>
  + HasEvolved: bool <<computed>>
}

' Relationships
BattleService ..|> IBattleService
BattleService --> BattleTurnResult
BattleService --> ProcessExpResult
BattleService --> GameSession
BattleService --> IUserRepository
BattleService --> IWorldGenerationService
BattleService --> IExpService

@enduml</content>
<parameter name="filePath">c:\C#\PokemonConsole\TurnBasedPokemon\Diagram\ClassDiagram\BattleServices.puml